# CorPCA

./: README.md  pyproject.toml
corpca/: __init__.py  corpca.py  pca.py
